@@ -1,3 +1,9 @@
+2009-02-17  Joseph Myers  <joseph@codesourcery.com>
+
+	PR c/35446
+	* c-parser.c (c_parser_braced_init): Call pop_init_level when
+	skipping until next close brace.
+
 2009-02-13  Joseph Myers  <joseph@codesourcery.com>
 
 	PR c/35444
